--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+# Variáveis do Docker e Banco
 DB_HOST=db
 DB_USER=user
 DB_PASSWORD=userpass
@@ -5,3 +6,13 @@ DB_NAME=loja
 DB_PORT=3306
 PORT=3000
 NODE_ENV=development
+
+# 1. Segredo do JWT (use uma string longa e aleatória)
+JWT_SECRET=coloque_seu_segredo_do_jwt_aqui
+
+# 2. Configuração do Serviço de E-mail (Mailtrap.io para testes)
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=seu_usuario_mailtrap_aqui
+EMAIL_PASS=sua_senha_mailtrap_aqui
+EMAIL_FROM="Nome da Loja <no-reply@loja.com>"   
