--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
   backend:
     build: ./backend
     container_name: api_backend
+    restart: on-failure
     depends_on:
       db:
         condition: service_healthy 
